--- a/.env.example
+++ b/.env.example
@@ -57,6 +57,13 @@ MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
+# SMSBOX SMS Gateway (OTP)
+SMSBOX_BASE_URL="http://smsbox.com/SMSGateway/Services/Messaging.asmx/Http_SendSMS"
+SMSBOX_USERNAME=
+SMSBOX_PASSWORD=
+SMSBOX_CUSTOMER_ID=
+SMSBOX_SENDER=
+
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
